feat: 페이스북 SDK 설정 페이스북 개발 계정 연결 키체인 공유 설정

--- a/PersonalScheduler/Resources/Info.plist
+++ b/PersonalScheduler/Resources/Info.plist
@@ -19,5 +19,25 @@
 			</array>
 		</dict>
 	</dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fbAPP-ID</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>1326261937936900</string>
+	<key>FacebookClientToken</key>
+	<string>351ff4a66adb21be3975b729305fdc04</string>
+	<key>FacebookDisplayName</key>
+	<string>PersonalScheduler</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+	</array>
 </dict>
 </plist>
