--- a/PersonalScheduler/Resources/Info.plist
+++ b/PersonalScheduler/Resources/Info.plist
@@ -24,7 +24,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fbAPP-ID</string>
+				<string>1326261937936900</string>
 			</array>
 		</dict>
 	</array>
